[rachio] Reduce PR diff for Copilot review
Signed-off-by: Kovacs Istvan <kovacs.istvan77@google.com>